k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  namespace: pavithra-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: fitness-tracker-app
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      containers:
        - name: fitness-tracker-app
          image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest
          ports:
            - containerPort: 5000
          # ✔ All configMap vars removed
          # ✔ Direct env variables added
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  namespace: pavithra-ns
spec:
  selector:
    app: fitness-tracker-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
