k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
  namespace: pavithra-ns
spec:
  parentRefs:
  - name: fitness-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
    backendRefs:
    - name: fitness-tracker-service
      port: 80
